// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsItemInput renders correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View
    style={
      {
        "borderBottomColor": "#E6E6E6",
        "borderBottomWidth": 1,
        "marginHorizontal": 16,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          [
            {
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#2E3338",
              "fontFamily": "RedHatDisplayRegular",
              "fontSize": 12,
              "lineHeight": 24,
            }
          }
        >
          title
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "gap": 8,
              "justifyContent": "center",
            },
            {
              "justifyContent": "flex-end",
              "paddingLeft": 16,
            },
          ]
        }
      >
        <TextInput
          multiline={true}
          onBlur={[Function]}
          onChangeText={[MockFunction]}
          onFocus={[Function]}
          style={
            [
              {
                "color": "#2E3338",
                "flex": 1,
                "fontFamily": "RedHatDisplayRegular",
                "fontSize": 12,
                "lineHeight": 22,
                "paddingHorizontal": 0,
                "paddingVertical": 12,
              },
              {
                "textAlignVertical": "top",
              },
              [
                {
                  "color": "#666666",
                  "minWidth": 160,
                  "paddingVertical": 0,
                  "textAlign": "right",
                },
                {
                  "color": "#666666",
                },
              ],
            ]
          }
          testID="testID"
          value="value"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`SettingsItemSwitch renders correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View
    style={
      {
        "borderBottomColor": "#E6E6E6",
        "borderBottomWidth": 1,
        "marginHorizontal": 16,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          [
            {
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#2E3338",
              "fontFamily": "RedHatDisplayRegular",
              "fontSize": 12,
              "lineHeight": 24,
            }
          }
        >
          title
        </Text>
      </View>
      <AndroidSwitch
        accessibilityRole="switch"
        enabled={true}
        on={true}
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        thumbTintColor="#E6E6E6"
        trackColorForFalse="#757575"
        trackColorForTrue="#2F4ACD"
        trackTintColor="#2F4ACD"
      />
    </View>
  </View>
</View>
`;

exports[`SettingsItemTextValue renders correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View
    style={
      {
        "borderBottomColor": "#E6E6E6",
        "borderBottomWidth": 1,
        "marginHorizontal": 16,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          [
            {
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#2E3338",
              "fontFamily": "RedHatDisplayRegular",
              "fontSize": 12,
              "lineHeight": 24,
            }
          }
        >
          title
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            {
              "color": "#666666",
              "fontFamily": "RedHatDisplayRegular",
              "fontSize": 12,
              "lineHeight": 24,
              "marginRight": 16,
            }
          }
          testID="testID/value"
        >
          value
        </Text>
        <svg
          fill="none"
          height={12}
          style={{}}
          viewBox="0 0 14 27"
          width={6}
        >
          <path
            d="M13.7099 14.2385L1.70421 26.7071C1.30403 27.1089 0.676985 27.095 0.290137 26.6794C-0.0833726 26.2777 -0.0833726 25.6404 0.290137 25.2386L11.5888 13.5042L0.290137 1.76985C-0.0967122 1.36808 -0.0967122 0.703093 0.290137 0.301326C0.676985 -0.100442 1.31736 -0.100442 1.70421 0.301326L13.7099 12.77C14.0967 13.1717 14.0967 13.8367 13.7099 14.2385Z"
            fill="#757575"
            style={{}}
          />
        </svg>
      </View>
    </View>
  </View>
</View>
`;

exports[`SettingsItemTextValue renders correctly without value 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View
    style={
      {
        "borderBottomColor": "#E6E6E6",
        "borderBottomWidth": 1,
        "marginHorizontal": 16,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          [
            {
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#2E3338",
              "fontFamily": "RedHatDisplayRegular",
              "fontSize": 12,
              "lineHeight": 24,
            }
          }
        >
          title
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      />
    </View>
  </View>
</View>
`;
